loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:10: error: 'while' expected but 'if' found.
  if (biscuits<3){
  ^Poucet2:16: error: '(' expected but '}' found.
}
^