loopdowhile.Poucet2.scala.code
while (!sortieTrouvee()){
  var biscuits:Int = 0;
  do {
      avance()
  while(!crossing()) 
    if (estSurBiscuit()){
      biscuits = biscuits + 1;
    }
  }
  if (biscuits<3){
    droite();
  }
  else {
    gauche();
  }
}
avance()